--- a/Task4_OpenMP/Task4/Task4/Task4.vcxproj.filters
+++ b/Task4_OpenMP/Task4/Task4/Task4.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
