--- a/Task1_treads/GameOfLife/GameOfLife/GameOfLife.vcxproj.filters
+++ b/Task1_treads/GameOfLife/GameOfLife/GameOfLife.vcxproj.filters
@@ -23,5 +23,8 @@
     <Text Include="input.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
+    <Text Include="output.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
